--- a/result/2022-01-12.md
+++ b/result/2022-01-12.md
@@ -1,12 +1,12 @@
-1. [刘暖曦](https://s.weibo.com//weibo?q=%E5%88%98%E6%9A%96%E6%9B%A6&Refer=top) 1497055
-2. [再塑党的形象的伟大工程](https://s.weibo.com//weibo?q=%23%E5%86%8D%E5%A1%91%E5%85%9A%E7%9A%84%E5%BD%A2%E8%B1%A1%E7%9A%84%E4%BC%9F%E5%A4%A7%E5%B7%A5%E7%A8%8B%23&Refer=top) 1234939
-3. [女子刚入职就和老板恋爱被骗18万](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E5%88%9A%E5%85%A5%E8%81%8C%E5%B0%B1%E5%92%8C%E8%80%81%E6%9D%BF%E6%81%8B%E7%88%B1%E8%A2%AB%E9%AA%9718%E4%B8%87%23&Refer=top) 1079761
-4. [110和119领证了](https://s.weibo.com//weibo?q=%23110%E5%92%8C119%E9%A2%86%E8%AF%81%E4%BA%86%23&Refer=top) 997327
-5. [早婚早育可能触发宫颈癌](https://s.weibo.com//weibo?q=%23%E6%97%A9%E5%A9%9A%E6%97%A9%E8%82%B2%E5%8F%AF%E8%83%BD%E8%A7%A6%E5%8F%91%E5%AE%AB%E9%A2%88%E7%99%8C%23&Refer=top) 865980
-6. [谢霆锋谈为什么代言特步20年](https://s.weibo.com//weibo?q=%23%E8%B0%A2%E9%9C%86%E9%94%8B%E8%B0%88%E4%B8%BA%E4%BB%80%E4%B9%88%E4%BB%A3%E8%A8%80%E7%89%B9%E6%AD%A520%E5%B9%B4%23&Refer=top) 804342
-7. [2030年九成女孩将完成HPV疫苗接种](https://s.weibo.com//weibo?q=%232030%E5%B9%B4%E4%B9%9D%E6%88%90%E5%A5%B3%E5%AD%A9%E5%B0%86%E5%AE%8C%E6%88%90HPV%E7%96%AB%E8%8B%97%E6%8E%A5%E7%A7%8D%23&Refer=top) 773223
-8. [郑州1月12日不再进行全员核酸检测](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E1%E6%9C%8812%E6%97%A5%E4%B8%8D%E5%86%8D%E8%BF%9B%E8%A1%8C%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E6%A3%80%E6%B5%8B%23&Refer=top) 717193
-9. [媒体评王冰冰遭人肉曝光隐私](https://s.weibo.com//weibo?q=%23%E5%AA%92%E4%BD%93%E8%AF%84%E7%8E%8B%E5%86%B0%E5%86%B0%E9%81%AD%E4%BA%BA%E8%82%89%E6%9B%9D%E5%85%89%E9%9A%90%E7%A7%81%23&Refer=top) 685630
+1. [媒体评王冰冰遭人肉曝光隐私](https://s.weibo.com//weibo?q=%23%E5%AA%92%E4%BD%93%E8%AF%84%E7%8E%8B%E5%86%B0%E5%86%B0%E9%81%AD%E4%BA%BA%E8%82%89%E6%9B%9D%E5%85%89%E9%9A%90%E7%A7%81%23&Refer=top) 1975742
+2. [刘暖曦](https://s.weibo.com//weibo?q=%E5%88%98%E6%9A%96%E6%9B%A6&Refer=top) 1497055
+3. [再塑党的形象的伟大工程](https://s.weibo.com//weibo?q=%23%E5%86%8D%E5%A1%91%E5%85%9A%E7%9A%84%E5%BD%A2%E8%B1%A1%E7%9A%84%E4%BC%9F%E5%A4%A7%E5%B7%A5%E7%A8%8B%23&Refer=top) 1234939
+4. [女子刚入职就和老板恋爱被骗18万](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E5%88%9A%E5%85%A5%E8%81%8C%E5%B0%B1%E5%92%8C%E8%80%81%E6%9D%BF%E6%81%8B%E7%88%B1%E8%A2%AB%E9%AA%9718%E4%B8%87%23&Refer=top) 1079761
+5. [110和119领证了](https://s.weibo.com//weibo?q=%23110%E5%92%8C119%E9%A2%86%E8%AF%81%E4%BA%86%23&Refer=top) 997327
+6. [早婚早育可能触发宫颈癌](https://s.weibo.com//weibo?q=%23%E6%97%A9%E5%A9%9A%E6%97%A9%E8%82%B2%E5%8F%AF%E8%83%BD%E8%A7%A6%E5%8F%91%E5%AE%AB%E9%A2%88%E7%99%8C%23&Refer=top) 865980
+7. [谢霆锋谈为什么代言特步20年](https://s.weibo.com//weibo?q=%23%E8%B0%A2%E9%9C%86%E9%94%8B%E8%B0%88%E4%B8%BA%E4%BB%80%E4%B9%88%E4%BB%A3%E8%A8%80%E7%89%B9%E6%AD%A520%E5%B9%B4%23&Refer=top) 804342
+8. [2030年九成女孩将完成HPV疫苗接种](https://s.weibo.com//weibo?q=%232030%E5%B9%B4%E4%B9%9D%E6%88%90%E5%A5%B3%E5%AD%A9%E5%B0%86%E5%AE%8C%E6%88%90HPV%E7%96%AB%E8%8B%97%E6%8E%A5%E7%A7%8D%23&Refer=top) 773223
+9. [郑州1月12日不再进行全员核酸检测](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E1%E6%9C%8812%E6%97%A5%E4%B8%8D%E5%86%8D%E8%BF%9B%E8%A1%8C%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E6%A3%80%E6%B5%8B%23&Refer=top) 717193
 10. [刘诗诗说玲娜贝儿可爱](https://s.weibo.com//weibo?q=%23%E5%88%98%E8%AF%97%E8%AF%97%E8%AF%B4%E7%8E%B2%E5%A8%9C%E8%B4%9D%E5%84%BF%E5%8F%AF%E7%88%B1%23&Refer=top) 664534
 11. [不建议盲目等待九价HPV疫苗](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E5%BB%BA%E8%AE%AE%E7%9B%B2%E7%9B%AE%E7%AD%89%E5%BE%85%E4%B9%9D%E4%BB%B7HPV%E7%96%AB%E8%8B%97%23&Refer=top) 566062
 12. [江歌妈妈为起诉刘鑫花费120万](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E6%AD%8C%E5%A6%88%E5%A6%88%E4%B8%BA%E8%B5%B7%E8%AF%89%E5%88%98%E9%91%AB%E8%8A%B1%E8%B4%B9120%E4%B8%87%23&Refer=top) 550694
@@ -22,8 +22,8 @@
 22. [孕妇家中早产民警6分钟抬下6楼](https://s.weibo.com//weibo?q=%23%E5%AD%95%E5%A6%87%E5%AE%B6%E4%B8%AD%E6%97%A9%E4%BA%A7%E6%B0%91%E8%AD%A66%E5%88%86%E9%92%9F%E6%8A%AC%E4%B8%8B6%E6%A5%BC%23&Refer=top) 241801
 23. [鸡蛋也能吃出螃蟹的味道](https://s.weibo.com//weibo?q=%23%E9%B8%A1%E8%9B%8B%E4%B9%9F%E8%83%BD%E5%90%83%E5%87%BA%E8%9E%83%E8%9F%B9%E7%9A%84%E5%91%B3%E9%81%93%23&Refer=top) 239879
 24. [深圳累计报告8例新冠肺炎确诊病例](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%B4%AF%E8%AE%A1%E6%8A%A5%E5%91%8A8%E4%BE%8B%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 228680
-25. [事发前刘鑫阻止江歌报警](https://s.weibo.com//weibo?q=%23%E4%BA%8B%E5%8F%91%E5%89%8D%E5%88%98%E9%91%AB%E9%98%BB%E6%AD%A2%E6%B1%9F%E6%AD%8C%E6%8A%A5%E8%AD%A6%23&Refer=top) 209724
-26. [医护支援西安入户采样偶遇家人](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E6%8A%A4%E6%94%AF%E6%8F%B4%E8%A5%BF%E5%AE%89%E5%85%A5%E6%88%B7%E9%87%87%E6%A0%B7%E5%81%B6%E9%81%87%E5%AE%B6%E4%BA%BA%23&Refer=top) 205310
+25. [医护支援西安入户采样偶遇家人](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E6%8A%A4%E6%94%AF%E6%8F%B4%E8%A5%BF%E5%AE%89%E5%85%A5%E6%88%B7%E9%87%87%E6%A0%B7%E5%81%B6%E9%81%87%E5%AE%B6%E4%BA%BA%23&Refer=top) 212667
+26. [事发前刘鑫阻止江歌报警](https://s.weibo.com//weibo?q=%23%E4%BA%8B%E5%8F%91%E5%89%8D%E5%88%98%E9%91%AB%E9%98%BB%E6%AD%A2%E6%B1%9F%E6%AD%8C%E6%8A%A5%E8%AD%A6%23&Refer=top) 209724
 27. [感染奥密克戎症状有何不同](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E7%97%87%E7%8A%B6%E6%9C%89%E4%BD%95%E4%B8%8D%E5%90%8C%23&Refer=top) 203594
 28. [旅游博主亵渎烈士墓案终审维持原判](https://s.weibo.com//weibo?q=%23%E6%97%85%E6%B8%B8%E5%8D%9A%E4%B8%BB%E4%BA%B5%E6%B8%8E%E7%83%88%E5%A3%AB%E5%A2%93%E6%A1%88%E7%BB%88%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 192060
 29. [双减后的第一个期末考](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E5%87%8F%E5%90%8E%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%9C%9F%E6%9C%AB%E8%80%83%23&Refer=top) 191378
