--- a/result/2022-01-12.md
+++ b/result/2022-01-12.md
@@ -23,11 +23,11 @@
 23. [鸡蛋也能吃出螃蟹的味道](https://s.weibo.com//weibo?q=%23%E9%B8%A1%E8%9B%8B%E4%B9%9F%E8%83%BD%E5%90%83%E5%87%BA%E8%9E%83%E8%9F%B9%E7%9A%84%E5%91%B3%E9%81%93%23&Refer=top) 239879
 24. [深圳累计报告8例新冠肺炎确诊病例](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%B4%AF%E8%AE%A1%E6%8A%A5%E5%91%8A8%E4%BE%8B%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 228680
 25. [医护支援西安入户采样偶遇家人](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E6%8A%A4%E6%94%AF%E6%8F%B4%E8%A5%BF%E5%AE%89%E5%85%A5%E6%88%B7%E9%87%87%E6%A0%B7%E5%81%B6%E9%81%87%E5%AE%B6%E4%BA%BA%23&Refer=top) 212667
-26. [事发前刘鑫阻止江歌报警](https://s.weibo.com//weibo?q=%23%E4%BA%8B%E5%8F%91%E5%89%8D%E5%88%98%E9%91%AB%E9%98%BB%E6%AD%A2%E6%B1%9F%E6%AD%8C%E6%8A%A5%E8%AD%A6%23&Refer=top) 209724
-27. [感染奥密克戎症状有何不同](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E7%97%87%E7%8A%B6%E6%9C%89%E4%BD%95%E4%B8%8D%E5%90%8C%23&Refer=top) 203594
-28. [旅游博主亵渎烈士墓案终审维持原判](https://s.weibo.com//weibo?q=%23%E6%97%85%E6%B8%B8%E5%8D%9A%E4%B8%BB%E4%BA%B5%E6%B8%8E%E7%83%88%E5%A3%AB%E5%A2%93%E6%A1%88%E7%BB%88%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 192060
-29. [双减后的第一个期末考](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E5%87%8F%E5%90%8E%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%9C%9F%E6%9C%AB%E8%80%83%23&Refer=top) 191378
-30. [分手后不选择回头的原因](https://s.weibo.com//weibo?q=%23%E5%88%86%E6%89%8B%E5%90%8E%E4%B8%8D%E9%80%89%E6%8B%A9%E5%9B%9E%E5%A4%B4%E7%9A%84%E5%8E%9F%E5%9B%A0%23&Refer=top) 175289
+26. [分手后不选择回头的原因](https://s.weibo.com//weibo?q=%23%E5%88%86%E6%89%8B%E5%90%8E%E4%B8%8D%E9%80%89%E6%8B%A9%E5%9B%9E%E5%A4%B4%E7%9A%84%E5%8E%9F%E5%9B%A0%23&Refer=top) 210661
+27. [事发前刘鑫阻止江歌报警](https://s.weibo.com//weibo?q=%23%E4%BA%8B%E5%8F%91%E5%89%8D%E5%88%98%E9%91%AB%E9%98%BB%E6%AD%A2%E6%B1%9F%E6%AD%8C%E6%8A%A5%E8%AD%A6%23&Refer=top) 209724
+28. [感染奥密克戎症状有何不同](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E7%97%87%E7%8A%B6%E6%9C%89%E4%BD%95%E4%B8%8D%E5%90%8C%23&Refer=top) 203594
+29. [旅游博主亵渎烈士墓案终审维持原判](https://s.weibo.com//weibo?q=%23%E6%97%85%E6%B8%B8%E5%8D%9A%E4%B8%BB%E4%BA%B5%E6%B8%8E%E7%83%88%E5%A3%AB%E5%A2%93%E6%A1%88%E7%BB%88%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 192060
+30. [双减后的第一个期末考](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E5%87%8F%E5%90%8E%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%9C%9F%E6%9C%AB%E8%80%83%23&Refer=top) 191378
 31. [女儿拿30多张奖状掏干爸爸私房钱](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%84%BF%E6%8B%BF30%E5%A4%9A%E5%BC%A0%E5%A5%96%E7%8A%B6%E6%8E%8F%E5%B9%B2%E7%88%B8%E7%88%B8%E7%A7%81%E6%88%BF%E9%92%B1%23&Refer=top) 170203
 32. [西安滞留人员离开西安政策公布](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%BB%9E%E7%95%99%E4%BA%BA%E5%91%98%E7%A6%BB%E5%BC%80%E8%A5%BF%E5%AE%89%E6%94%BF%E7%AD%96%E5%85%AC%E5%B8%83%23&Refer=top) 169547
 33. [立陶宛政府背信弃义遭到国内外普遍反对](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E6%94%BF%E5%BA%9C%E8%83%8C%E4%BF%A1%E5%BC%83%E4%B9%89%E9%81%AD%E5%88%B0%E5%9B%BD%E5%86%85%E5%A4%96%E6%99%AE%E9%81%8D%E5%8F%8D%E5%AF%B9%23&Refer=top) 168234
@@ -38,4 +38,5 @@
 38. [被陌生人的善良整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E7%9A%84%E5%96%84%E8%89%AF%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 156089
 39. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
 40. [3人居家20天喝400瓶啤酒](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E5%B1%85%E5%AE%B620%E5%A4%A9%E5%96%9D400%E7%93%B6%E5%95%A4%E9%85%92%23&Refer=top) 138221
-41. [邓佳鑫晒最佳主持获奖证书](https://s.weibo.com//weibo?q=%E9%82%93%E4%BD%B3%E9%91%AB%E6%99%92%E6%9C%80%E4%BD%B3%E4%B8%BB%E6%8C%81%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6&Refer=top) 54381
+41. [邓佳鑫晒最佳主持获奖证书](https://s.weibo.com//weibo?q=%E9%82%93%E4%BD%B3%E9%91%AB%E6%99%92%E6%9C%80%E4%BD%B3%E4%B8%BB%E6%8C%81%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6&Refer=top) 71427
+42. [深圳沃尔玛](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E6%B2%83%E5%B0%94%E7%8E%9B&Refer=top) 32187
